// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneListTool Clicking one of the \`eye\` buttons triggers appropriate onChange actions. 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
    "key": "K",
    "store": "genes",
  },
  "type": "cellInfo/focus",
}
`;

exports[`GeneListTool all genes from the first page are selected by default on load 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
    "genes": Array [
      "J",
      "I",
      "K",
      "CEMIP",
    ],
  },
  "type": "genes/select",
}
`;

exports[`GeneListTool can sort the gene names in alphabetical order 1`] = `
Object {
  "payload": Object {
    "componentUuid": "testList",
    "properties": Array [
      "dispersions",
    ],
  },
  "type": "genes/propertiesLoading",
}
`;

exports[`GeneListTool can sort the gene names in alphabetical order 2`] = `
Object {
  "payload": Object {
    "componentUuid": "testList",
    "data": Object {
      "R3ALG3N3": Object {
        "dispersions": 12.3131,
      },
    },
    "experimentId": "1234",
    "properties": Array [
      "dispersions",
    ],
    "total": 1,
  },
  "type": "genes/propertiesLoadedPaginated",
}
`;
